@@ -1,16 +1,0 @@
-language: ruby
-before_install:
-  - gem update bundler --no-document
-before_script:
-  - psql -c 'create database queue_classic_test;' -U postgres
-env:
-  global:
-    - QC_DATABASE_URL="postgres://postgres@localhost/queue_classic_test"
-    - QC_BENCHMARK=true
-    - QC_BENCHMARK_MAX_TIME_DEQUEUE=60
-rvm:
-  - 2.6.3
-  - 2.5.5
-  - 2.4.6
-addons:
-  postgresql: 9.3
