@@ -4,6 +4,7 @@ Unreleased
 - `enqueue`, `enqueue_at`, `enqueue_in` return job hash with id.
 - Fixed unlock query for versions below Postgres 9.2
 - Change ruby versions tested in Travis to currently supported ones.
+- Switched project to use CircleCI, as it's way more consistent speed wise
 
 Version 3.0.0rc
 - Improved signal handling
